fix deployment attempt

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://lucashawthorne.github.io/skinstric-ai-virtual-internship",
-  "name": "skinstric-ai-virtual-internship",
+  "name": "Skinstric-AI",
   "private": true,
   "version": "0.0.0",
   "type": "module",
